[tool.poetry]
package-mode = false
description = "Helper scripts for managing github.com/siemens"
authors = ["Siemens <opensource@siemens.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyGithub = "^2.4.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
