[project]
authors = [
    {name = "Siemens", email = "opensource@siemens.com"},
]
requires-python = "<4.0,>=3.12"
dependencies = [
    "PyGithub<3.0.0,>=2.4.0",
    "loguru<1.0.0,>=0.7.2",
]
name = "siemens-github-helper-scripts" 
package-mode = false
description = "Helper scripts for managing github.com/siemens"
readme = "README.md"
version = "1.0.0"

[dependency-groups]
dev = [
    "ruff<1.0.0,>=0.8.0",
]
